is_debug=false
is_clang=false
is_component_build=false
is_cfi=false
is_clang=false
clang_use_chrome_plugins=false
v8_use_external_startup_data=false
# v8_embedder_string="-v8go"
v8_monolithic=true
v8_enable_gdbjit=false
v8_enable_i18n_support=false
v8_enable_test_features=false
v8_untrusted_code_mitigations=false
treat_warnings_as_errors=false
use_custom_libcxx=false
use_custom_libcxx_for_host=false
use_sysroot=false
use_gold=false
symbol_level=0
strip_debug_info=true
