is_debug=false
is_component_build=false
v8_monolithic=true

# v8_enable_webassembly=true
# v8_enable_gdbjit=false
v8_enable_i18n_support=false
v8_enable_test_features=false
# requires the rust rlibs
v8_enable_temporal_support=false

v8_use_external_startup_data=false
clang_use_chrome_plugins=false

symbol_level=1
strip_debug_info=true
dcheck_always_on=false
treat_warnings_as_errors=false
